--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,3 @@
-# pubspec.yaml
-
 name: ai_chat_app
 description: AI Chat App with file support
 version: 1.0.0+1
@@ -13,35 +11,35 @@ dependencies:
     sdk: flutter
   
   # 状态管理
-  provider: ^6.1.1
+  provider: any
   
   # 网络请求
-  http: ^1.1.0
-  dio: ^5.4.0
+  http: any
+  dio: any
   
   # 本地数据库
-  sqflite: ^2.3.0
-  path: ^1.8.3
+  sqflite: any
+  path: any
   
   # 文件处理
-  file_picker: ^6.1.1
-  path_provider: ^2.1.1
-  mime: ^1.0.4
+  file_picker: ^10.3.8
+  path_provider: any
+  mime: any
   
   # UI相关
-  flutter_markdown: ^0.6.18
-  image_picker: ^1.0.4
+  flutter_markdown: any
+  image_picker: ^1.2.1
   
   # 本地存储
-  shared_preferences: ^2.2.2
+  shared_preferences: any
   
   # 工具
-  uuid: ^4.2.1
+  uuid: any
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.1
+  flutter_lints: any
 
 flutter:
   uses-material-design: true
