--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   image_picker: any
   shared_preferences: any
   uuid: any
+  markdown: any
   
   # 权限请求
   permission_handler: any
