Update pubspec.yaml via AI Code Sync

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   shared_preferences: any
   uuid: any
   permission_handler: any
+  archive: any
+
   device_info_plus: any
   scrollable_positioned_list:
     path: lib/third_party/scrollable_positioned_list
