--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: any
-
 flutter:
   uses-material-design: true
+  
+  fonts:
+    - family: SarasaMono
+      fonts:
+        - asset: assets/fonts/SarasaMonoSC-Regular.ttf
